--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -86,17 +86,57 @@ tfoot input {
     }
 
 /* Style for horizontal scroll on top */
-.dataTables_scrollBody {
-    transform:rotateX(180deg);
+.dt-scroll-body {
+    transform: rotateX(180deg);
 }
-.dataTables_scrollBody table {
-    transform:rotateX(180deg);
+.dt-scroll-body table {
+    transform: rotateX(180deg);
 }
 
 .imgDetails {
 	font-size: 28px
 }
 
+#float {
+        position: fixed;
+        top: 7em;
+        right: 2em;
+        z-index: 100;
+    }
+
+.expandCollapseWidth{
+	width:20px;
+}
+.userIdWidth{
+	width:80px;
+}
+.taskIdWidth{
+	width:280px;
+}
+.pathIdWidth{
+	width:200px;
+}
+.typeWidth{
+	width:100px;
+}
+.destinationTypeWidth{
+	width:115px;
+}
+.createdWidth{
+	width:110px;
+}
+.completedWidth{
+	width:110px;
+}
+.resultWidth{
+	width:60px;
+}
+.retryUserIdWidth{
+	width:80px;
+}
+.errorWidth{
+	width:190px;
+}
 </style>
 <script th:inline="javascript">
 /*<![CDATA[*/
@@ -188,66 +228,66 @@ tfoot input {
 					</div> <!-- div2 -->
 					<!-- div id="spinner" class="overlay"></div -->
 					<div th:if="${results != null and results.size() > 0}">
-						<table id="resultsGrid" class="display cell-border" style="width:100%;table-layout: fixed;">
+						<table id="resultsGrid" class="display cell-border" style="width:100%">
 							<!--caption style="font-weight:bold" th:text="'Download Tasks'"></caption-->
 							<thead>
 								<tr id='attrRow2'>
-									<th id='colheading001'></th>
-									<th class="column-heading" id='colheading001' th:text="'User ID'"></th>
-									<th class="column-heading" id='colheading002' th:text="'Task ID'"></th>
-									<th class="column-heading" id='colheading003' th:text="'Path'"></th>
-									<th class="column-heading" id='colheading004' th:text="'Type'"></th>
-									<th class="column-heading" id='colheading005' th:text="'Destination Type'"></th>
-									<th class="column-heading" id='colheading006' th:text="'Created On'"></th>
-									<th class="column-heading" id='colheading007' th:text="'Completed On'"></th>
-									<th class="column-heading" id='colheading008' th:text="'Transfer Result'"></th>
-									<th class="column-heading" id='colheading009' th:text="'Retry User ID'"></th>
-									<th class="column-heading" id='colheading010' th:text="'Error'"></th>
+									<th id='colheading001' style="width:20px"></th>
+									<th class="column-heading userIdWidth" id='colheading001' th:text="'User ID'"></th>
+									<th class="column-heading taskIdWidth" id='colheading002' th:text="'Task ID'"></th>
+									<th class="column-heading pathWidth" id='colheading003' th:text="'Path'"></th>
+									<th class="column-heading typeWidth" id='colheading004' th:text="'Type'"></th>
+									<th class="column-heading destinationTypeWidth" id='colheading005' th:text="'Destination Type'"></th>
+									<th class="column-heading createdWidth" id='colheading006' th:text="'Created On'"></th>
+									<th class="column-heading completedWidth" id='colheading007' th:text="'Completed On'"></th>
+									<th class="column-heading resultWidth" id='colheading008' th:text="'Transfer Result'"></th>
+									<th class="column-heading retryUserIdWidth" id='colheading009' th:text="'Retry User ID'"></th>
+									<th class="column-heading errorWidth" id='colheading010' th:text="'Error'"></th>
 								</tr>
 								<tr>
-									<th id='col2heading001'>
+									<th class="" id='col2heading001'>
 										<div id="expandcollapseId"  class="imgDetails">
-											<button  style="border:none;" title="Click for Archive Summary"><i class="fa fa-caret-right" aria-hidden="true" style="color:black;"></i></button>
+											<button style="border:none;width:20px" title="Click for Expanding details of all rows"><i class="fa fa-caret-right" aria-hidden="true" style="color:black;"></i></button>
 										</div>
 									</th>
-									<th class="filterhead" id='col2heading001' th:text="'User ID'"></th>
-									<th class="filterhead" id='col2heading002' th:text="'Task ID'"></th>
-									<th class="filterhead" id='col2heading003' th:text="'Path'"></th>
-									<th class="filterhead" id='col2heading004' th:text="'Type'"></th>
-									<th class="filterhead" id='col2heading005' th:text="'Destination Type'"></th>
-									<th class="filterhead" id='col2heading006' th:text="'Created On'"></th>
-									<th class="filterhead" id='col2heading007' th:text="'Completed On'"></th>
-									<th class="filterhead" id='col2heading008' th:text="'Transfer Result'"></th>
-									<th class="filterhead" id='col2heading009' th:text="'Retry User ID'"></th>
-									<th class="filterhead" id='col2heading010' th:text="'Error'"></th>
+									<th class="filterhead userIdWidth" id='col2heading001' th:text="'User ID'"></th>
+									<th class="filterhead taskIdWidth" id='col2heading002' th:text="'Task ID'"></th>
+									<th class="filterhead pathWidth" id='col2heading003' th:text="'Path'"></th>
+									<th class="filterhead typeWidth" id='col2heading004' th:text="'Type'"></th>
+									<th class="filterhead destinationTypeWidth" id='col2heading005' th:text="'Destination Type'"></th>
+									<th class="filterhead createdWidth" id='col2heading006'  th:text="'Created On'"></th>
+									<th class="filterhead completedWidth" id='col2heading007'  th:text="'Completed On'"></th>
+									<th class="filterhead resultWidth" id='col2heading008' th:text="'Transfer Result'"></th>
+									<th class="filterhead retryUserIdWidth" id='col2heading009' th:text="'Retry User ID'"></th>
+									<th class="filterhead errorWidth" id='col2heading010' th:text="'Error'"></th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr id='attrCol0' th:each="result : ${results}">
-									<td id='col1'></td>
-									<td id='col1' th:text="${result.userId}"></td>
-									<td id='col2' style="white-space: nowrap;"><a th:href="@{/downloadtask(taskId=${result.taskId}, type=${result.type})}" th:text="${result.taskId}"></a></td>
-									<td id='col3' th:if="${result.type} == 'COLLECTION'">
+									<td id='col1' class="expandcollapseId"></td>
+									<td id='col1' class="userIdWidth" th:text="${result.userId}"></td>
+									<td id='col2' class="taskIdWidth" style="white-space: nowrap;"><a th:href="@{/downloadtask(taskId=${result.taskId}, type=${result.type})}" th:text="${result.taskId}"></a></td>
+									<td id='col3' class="pathWidth" th:if="${result.type} == 'COLLECTION'">
 										<a id="pathLinkId" th:href="@{/collection(path=${result.path}, action=displayOnly)}" target="_blank">
 											<span id="spanLinkId" style="width: 200px; display:inline-block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" th:text="${result.path}">
 											</span>
 										</a>
 									</td>
-									<td id='col3' th:if="${result.type} == 'DATA_OBJECT'">
+									<td id='col3' class="pathWidth" th:if="${result.type} == 'DATA_OBJECT'">
 										<a id="pathLinkId" th:href="@{/datafile(path=${result.path}, action=displayOnly)}" target="_blank">
 											<span id="spanLinkId" style="width: 200px; display:inline-block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" th:text="${result.path}">
 											</span>
 										</a>
 									</td>
-									<td id='col3' th:if="${result.type} == 'COLLECTION_LIST'"></td>
-									<td id='col3' th:if="${result.type} == 'DATA_OBJECT_LIST'"></td>
-									<td id='col4' th:text="${result.type}"></td>
-									<td id='col5' th:text="${result.destinationType}"></td>
-									<td id='col6' th:text="${result.created}"></td>
-									<td id='col7' th:text="${result.completed}"></td>
-									<td id='col8' th:text="${result.result}"></td>
-									<td id='col9' th:text="${result.retryUserId}"></td>
-									<td id='col10' style="word-break:break-all;" th:text="${result.error}"></td>
+									<td id='col3' class="pathWidth" th:if="${result.type} == 'COLLECTION_LIST'"></td>
+									<td id='col3' class="pathWidth" th:if="${result.type} == 'DATA_OBJECT_LIST'"></td>
+									<td id='col4' class="typeWidth" th:text="${result.type}"></td>
+									<td id='col5' class="destinationTypeWidth" th:text="${result.destinationType}"></td>
+									<td id='col6' class="createdWidth"  th:text="${result.created}"></td>
+									<td id='col7' class="completedWidth" th:text="${result.completed}"></td>
+									<td id='col8' class="resultWidth" th:text="${result.result}"></td>
+									<td id='col9' class="retryUserIdWidth" th:text="${result.retryUserId}"></td>
+									<td id='col10' class="errorWidth" style="word-break:break-all;" th:text="${result.error}"></td>
 									<td id='col11' style="visibility: hidden;" th:text="${result.displayPath}"></td>
 									<td id='col12' style="visibility: hidden;" th:text="${result.sortCreated}"></td>
 									<td id='col13' style="visibility: hidden;" th:text="${result.sortCompleted}"></td>
@@ -255,17 +295,17 @@ tfoot input {
 							</tbody>
 							<tfoot>
 								<tr id='attrFooter2'>
-									<th id='colf1'></th>
-									<th class="column-heading" id='colfoot001' th:text="'User ID'"></th>
-									<th class="column-heading" id='colfoot002' th:text="'Task ID'"></th>
-									<th class="column-heading" id='colfoot003' th:text="'Path'"></th>
-									<th class="column-heading" id='colfoot004' th:text="'Type'"></th>
-									<th class="column-heading" id='colfoot005' th:text="'Destination Type'"></th>
-									<th class="column-heading" id='colfoot006' th:text="'Created On'"></th>
-									<th class="column-heading" id='colfoot007' th:text="'Completed On'"></th>
-									<th class="column-heading" id='colfoot008' th:text="'Transfer Result'"></th>
-									<th class="column-heading" id='colfoot009' th:text="'Retry User ID'"></th>
-									<th class="column-heading" id='colfoot0010' th:text="'Error'"></th>
+									<th class="expandcollapseId" id='colf1'></th>
+									<th class="column-heading userIdWidth" id='colfoot001' th:text="'User ID'"></th>
+									<th class="column-heading taskIdWidth" id='colfoot002' th:text="'Task ID'"></th>
+									<th class="column-heading pathWidth" id='colfoot003' th:text="'Path'"></th>
+									<th class="column-heading typeWidth" id='colfoot004' th:text="'Type'"></th>
+									<th class="column-heading destinationWidth" id='colfoot005' th:text="'Destination Type'"></th>
+									<th class="column-heading createdWidth" id='colfoot006' th:text="'Created On'"></th>
+									<th class="column-heading completedWidth" id='colfoot007' th:text="'Completed On'"></th>
+									<th class="column-heading resultWidth" id='colfoot008' th:text="'Transfer Result'"></th>
+									<th class="column-heading retryUserIdWidth" id='colfoot009' th:text="'Retry User ID'"></th>
+									<th class="column-heading errorWidth" id='colfoot0010' th:text="'Error'"></th>
 								</tr>
 							</tfoot>
 						</table>
@@ -301,6 +341,12 @@ tfoot input {
 <script src="https://cdn.datatables.net/2.1.5/js/dataTables.js"></script>
 <script src="js/select2-4.0.11.min.js"></script>
 <script type="text/javascript" charset="utf8" src="DataTables/Plugins/dataRender/ellipsis.js"></script>
+<script type="https://cdn.datatables.net/responsive/3.0.3/js/dataTables.responsive.js"></script>
+<script type="https://cdn.datatables.net/responsive/3.0.3/js/responsive.dataTables.js"></script>
+<script type="https://cdn.datatables.net/fixedheader/4.0.1/js/dataTables.fixedHeader.js"></script>
+<script type="https://cdn.datatables.net/fixedheader/4.0.1/js/fixedHeader.dataTables.js"></script>
+<script type="https://github.com/dhobi/datatables.colResize/blob/master/jquery.dataTables.colResize.js"></script>
+
 <!--custom script for all page-->
 <script src="js/scripts.js"></script>
 
@@ -308,7 +354,6 @@ tfoot input {
 /*<![CDATA[*/
 	$(document).ready(function(){
 		var tableId = 'resultsGrid';
-		var table;
 		if(currentPage ==1){
 			currentPage = 1;
 		}
@@ -347,15 +392,19 @@ tfoot input {
 		    }
 		} );
 
-		loadDataTable();
-
-		function loadDataTable() {
-			table = $('#' + 'resultsGrid').DataTable( {
+		//function loadDataTable() {
+			var table = $('#' + 'resultsGrid').DataTable( {
 				orderCellsTop: true,
 				"aaSorting": [],
 				dom: 'rt',
-				scrollX : 'TRUE',
-				'responsive': true,
+				scrollX: true,
+				//scrollY: 350,
+				/*fixedHeader: {
+					header: true,
+		            footer: true,
+		        },*/
+		        //paging: false,
+		        responsive: true,
 				columnDefs: [ 
 							{targets: 0, data: null, width:20, className: 'dt-control', orderable: false, defaultContent: ''}, // expand row icon
 							{targets: 1, data: 'userId',width:80, visible: queryAll}, //userId
@@ -374,16 +423,16 @@ tfoot input {
 						],
 				"lengthMenu": [ [-1], ["All"] ],
 				"initComplete": function () {
-			          var api = this.api();
-			          // Setup - add a text input to each header cell
-			          $('.filterhead', api.table().header()).each( function () {
-			            var title = $(this).text();
-			          $(this).html( '<input type="text" placeholder="Search '+title+'" class="column_search" />' );
-			        } );
-			          $("#resultsGrid").show();
+						var api = this.api();
+						// Setup - add a text input to each header cell
+						$('.filterhead', api.table().header()).each( function () {
+						 	var title = $(this).text();
+							$(this).html( '<input type="text" placeholder="Search '+title+'" class="column_search" />' );
+						} );
+						$("#resultsGrid").show();
 			      },
-		} ); //var table = $
-		} // loadDataTable
+		} );
+
 		// Add event listener for opening and closing details
 		table.on('click', 'td.dt-control', function (e) {
 		    let tr = e.target.closest('tr');
@@ -437,12 +486,11 @@ tfoot input {
 
 	function format(d) {
 	    // `d` is the original data object for the row
-	    var tableFormat = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
-	    var result = (d.result === null) || (d.result === "") ? "" : '<tr><td><b>Transfer Result:</b></td> <td>' + d.result + '</td></tr>';
+	    var result = (d.result === null) || (d.result === "") ? "" : '<b>Transfer Result:</b> ' + d.result + '<br/>';
 	    // The path has been converted to an anchor link. So we will use displayPath to show the path
-	    var path = (d.displayPath === null) || (d.displayPath === "") ? "" : '<tr><td><b>Path:</b></td><td>' + d.displayPath + '</td></tr>';
-	    var error = (d.error === null ) || (d.error === "") ? "" : '<tr><td><b>Error:</b></td><td>' + d.error + '</td></tr>';
-		return(tableFormat + result + path + error + '</table>');
+	    var path = (d.displayPath === null) || (d.displayPath === "") ? "" : '<b>Path:</b> ' + d.displayPath + '<br/>';
+	    var error = (d.error === null ) || (d.error === "") ? "" : '<b>Error:</b> ' + d.error + '<br/>';
+		return(result + path + error);
  	}
 
 	function displayAll()
