HPCDATAMGM-1900: Increase the ScrollY length

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -388,7 +388,8 @@ tfoot input {
 				"aaSorting": [],
 				dom: 'rt',
 				scrollX: true,
-				scrollY: '350px',
+				scrollY: '1300px',
+				fixedHeader: true,
 		        paging: false,
 		        responsive: false,
 				columnDefs: [ 
