HPCDATAMGM-1900: set scrollerCollapse as true to resize table after filtering

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -377,6 +377,7 @@ tfoot input {
 			dom: 'rt',
 			scrollX: true,
 			scrollY: '600',
+			scrollCollapse: true,
 			fixedHeader: true,
 	        paging: false,
 	        responsive: false,
