--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -25,9 +25,7 @@
 <link href="css/style-responsive.css" rel="stylesheet" />
 <link href="css/xcharts.min.css" rel=" stylesheet" />
 <link href="css/jquery-ui-1.10.4.min.css" rel="stylesheet" />
-<link href="DataTables/Responsive-2.2.7/css/responsive.dataTables.min.css" rel="stylesheet" />
-<link href="DataTables/Responsive-2.2.7/css/responsive.bootstrap.min.css" rel="stylesheet" />
-<link href="DataTables/DataTables-1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="DataTables/DataTables-2.1.5/css/dataTables.dataTables.min.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
 <!--[if lt IE 9]>
@@ -35,38 +33,43 @@
       <script src="js/respond.min.js"></script>
       <script src="js/lte-ie7.js"></script>
     <![endif]-->
-<script src="js/angular/1.5.0/angular.js"></script>
-<script src="js/angular/1.5.0/angular-touch.js"></script>
-<script src="js/angular/1.5.0/angular-animate.js"></script>
-<script src="js/ui-grid/csv.js"></script>
-<script src="js/ui-grid/pdfmake.js"></script>
-<script src="js/ui-grid/vfs_fonts.js"></script>
-
-<script src="js/ui-grid/4.0.2/ui-grid.js"></script>
-<script src="js/jquery/3.1.1/jquery.min.js"></script>
-<script src="js/bootstrap/3.3.7/bootstrap.min.js"></script>
-<link rel="stylesheet" href="css/ui-grid.css" type="text/css" />
-
-
-<script src="DataTables/DataTables-1.11.5/js/jquery.dataTables.min.js"></script>
-<script src="DataTables/Sort-1.13.1/js/file-size.js"></script>
-<script type="text/javascript" charset="utf8" src="DataTables/Plugins/dataRender/ellipsis.js"></script>
-
-
+    
 <style>
 /*style.css*/
-.gridStyle {
-	border: 1px solid rgb(212, 212, 212);
-	height: 300px
+
+thead input {
+        width: 100%;
+    }
+
+tfoot input {
+        width: 100%;
+        padding: 3px;
+        box-sizing: border-box;
+    }
+
+
+.userIdWidth{
+	width:70px;
+}
+.taskIdWidth{
+	width:280px;
+}
+.sourceTypeWidth{
+	width:150px;
+}
+.resultWidth{
+	width:105px;
+}
+.createdWidth{
+	width:110px;
+}
+.completedWidth{
+	width:110px;
+}
+.errorWidth{
+	width:200px;
 }
 
-/* Style for horizontal scroll on top */
-.dataTables_scrollBody {
-    transform:rotateX(180deg);
-}
-.dataTables_scrollBody table {
-    transform:rotateX(180deg);
-}
 
 </style>
 <script th:inline="javascript">
@@ -77,60 +80,6 @@
     var currentPage = [[${currentPage}]];
     var totalPages = "[[${totalPages}]]";
     var queryAll = "[[${queryAll}]]";
-
-var app = angular.module('app', ['ngAnimate', 'ngTouch', 'ui.grid', 'ui.grid.pagination', 'ui.grid.resizeColumns', 'ui.grid.moveColumns']);
-
-app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', function ($scope, $http, $interval, uiGridConstants ) {
-
-	$scope.gridOptions1 = {
-    enableSorting: true,
-    enableFiltering: true,
-    paginationPageSize: 100,
-    minRowsToShow: currentPageSize,
-    enablePaginationControls: false,
-    enableVerticalScrollbar: uiGridConstants.scrollbars.NEVER,
-    columnDefs: [
-		 		 { field: 'userId', width:150, displayName: 'User ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP">{{COL_FIELD CUSTOM_FILTERS}}</div>'  },
-                 { field: 'taskId', minWidth:300, displayName: 'Task ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="uploadtask?taskId={{row.entity.taskId}}&amp;type={{row.entity.type}}">{{COL_FIELD CUSTOM_FILTERS}}</a></div>'  },
-                 { field: 'sourceType', width:200, displayName : 'Source Type'},
-                 { field: 'result', width:150, displayName: 'Transfer Result'},
-                 { field: 'created', width:175, displayName : 'Created On' },
-                 { field: 'completed', width:175, displayName : 'Completed On'}
-                ],
-    onRegisterApi: function( gridApi ) {
-      $scope.grid1Api = gridApi;
-      $scope.totalPages = totalPages;
-      $scope.currentPage = currentPage;
-      $scope.totalRows = totalRows;
-      $scope.currentPageSize = currentPageSize;
-    }
-  };
-  $scope.gridOptions1.totalItems = totalRows;
-  $scope.gridOptions1.data = results;
-  if(queryAll == "false")
-	  $scope.gridOptions1.columnDefs[0].visible = false;
-
-  $scope.expandAll = function(){
-	    $scope.gridApi.treeBase.expandAllRows();
-	  };
-
-  $scope.getId = function(grid,row,col)
-	  {
-	    console.log(row);
-	    if(row.treeNode.children[0].row.treeNode.children[0])
-	    {
-	      var entity = row.treeNode.children[0].row.treeNode.children[0].row.entity;
-	      return entity.id;
-	    }
-	    else if(row.treeNode.children[0])
-	    {
-	      var entity = row.treeNode.children[0].row.entity;
-	      return entity.id;
-	    }
-
-	    return row.entity.id;
-	  }	 
-}]);
 /*]]>*/
 </script>
 
@@ -201,38 +150,31 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 									<!--caption style="font-weight:bold" th:text="'Download Tasks'"></caption-->
 									<thead>
 										<tr id='attrRow2'>
-											<th class="column-heading" id='colheading001' th:text="'User ID'"></th>
-											<th class="column-heading" id='colheading002' th:text="'Task ID'"></th>
-											<th class="column-heading" id='colheading004' th:text="'Source Type'"></th>
-											<th class="column-heading" id='colheading008' th:text="'Transfer Result'"></th>
-											<th class="column-heading" id='colheading006' th:text="'Created On'"></th>
-											<th class="column-heading" id='colheading007' th:text="'Completed On'"></th>
-											<th class="column-heading" id='colheading009' th:text="'Error'"></th>
+											<th class="column-heading userIdWidth" id='colheading001' th:text="'User ID'"></th>
+											<th class="column-heading taskIdWidth" id='colheading002' th:text="'Task ID'"></th>
+											<th class="column-heading sourceTypeWidth" id='colheading004' th:text="'Source Type'"></th>
+											<th class="column-heading resultWidth" id='colheading008' th:text="'Transfer Result'"></th>
+											<th class="column-heading createdWidth" id='colheading006' th:text="'Created On'"></th>
+											<th class="column-heading completedWidth" id='colheading007' th:text="'Completed On'"></th>
+											<th class="column-heading errorWidth" id='colheading009' th:text="'Error'"></th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr id='attrCol0' th:each="result : ${results}">
-											<td id='col1' th:text="${result.userId}"></td>
-											<td id='col2' style="white-space: nowrap;">
+											<td id='col1' class="userIdWidth" th:text="${result.userId}"></td>
+											<td id='col2' class="taskIdWidth" style="white-space: nowrap;">
 												<a th:href="@{/uploadtask(taskId=${result.taskId}, type=${result.type})}" th:text="${result.taskId}"></a></td>
-											<td id='col3' th:text="${result.sourceType}"></td>
-											<td id='col4' th:text="${result.result}"></td>
-											<td id='col5' th:text="${result.created}"></td>
-											<td id='col6' th:text="${result.completed}"></td>
-											<td id='col7' th:text="${result.error}"></td>
+											<td id='col3' class="sourceTypeWidth" th:text="${result.sourceType}"></td>
+											<td id='col4' class="resultWidth" th:text="${result.result}"></td>
+											<td id='col5' class="createdWidth" th:text="${result.created}"></td>
+											<td id='col6' class="completedWidth" th:text="${result.completed}"></td>
+											<td id='col7' class="errorWidth" th:text="${result.error}"></td>
 											<td id='col8' style="visibility: hidden;" th:text="${result.sortCreated}"></td>
 											<td id='col9' style="visibility: hidden;" th:text="${result.sortCompleted}"></td>
 										</tr>
 									</tbody>
 									<tfoot>
 										<tr id='attrFooter2'>
-											<td class="column-heading" id='colfoot001' th:text="'User ID'"></td>
-											<td class="column-heading" id='colfoot002' th:text="'Task ID'"></td>
-											<td class="column-heading" id='colfoot004' th:text="'Source Type'"></td>
-											<td class="column-heading" id='colfoot008' th:text="'Transfer Result'"></td>
-											<td class="column-heading" id='colfoot006' th:text="'Created On'"></td>
-											<td class="column-heading" id='colfoot007' th:text="'Completed On'"></td>
-											<td class="column-heading" id='colfoot009' th:text="'Error'"></td>
 										</tr>
 									</tfoot>
 								</table>
@@ -269,16 +211,14 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 	</section>
 	<!-- container section start -->
 
-	<!-- javascripts -->
-	<!-- bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-
-	<script src="js/jquery-ui-1.10.4.min.js"></script>
-	<script src="js/jquery.scrollTo.min.js"></script>
-	<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-	<script src="assets/jquery-knob/js/jquery.knob.js"></script>
-	<script src="js/jquery.sparkline.js" type="text/javascript"></script>
-	<script src="js/jquery.customSelect.min.js"></script>
+<script src="js/jquery/jquery-3.7.1.min.js"></script>
+<script src="js/jquery.scrollTo.min.js"></script>
+<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap/3.3.7/bootstrap.min.js"></script>
+<script src="DataTables/DataTables-2.1.5/js/dataTables.js"></script>
+<script src="js/select2-4.0.11.min.js"></script>
+<script type="text/javascript" charset="utf8" src="DataTables/Plugins/dataRender/ellipsis.js"></script>
 
 	<!--custome script for all page-->
 	<script src="js/scripts.js"></script>
@@ -313,7 +253,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 		                    .draw();
 		            }
 		        } );
-		    } );
+		    } );	    
 
 		/*
 			Both the Path field and Error fields use the Ellipsis plugin to render partial string with ellipses and
@@ -328,11 +268,12 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 				orderCellsTop: true,
 				"aaSorting": [],
 				dom: 'rt',
-				scrollX : 'TRUE',
-				columnDefs: [ {targets: 0,  data: 'userId', width:100, visible: queryAll}, //userId
-							{targets: 1, data: 'taskId', width:250, visible: true},  // taskId
-							{targets: 2, data: 'sourceType', width: 110, visible: true},  // source type
-							{targets: 3, data: 'result', width: 100, visible: true},  // transfer result
+				scrollX : true,
+				scrollY: '500',
+				columnDefs: [ {targets: 0,  data: 'userId', width:70, visible: queryAll}, //userId
+							{targets: 1, data: 'taskId', width:280, visible: true},  // taskId
+							{targets: 2, data: 'sourceType', width: 150, visible: true},  // source type
+							{targets: 3, data: 'result', width: 105, visible: true},  // transfer result
 							{targets: 4, data: 'created', width: 110, visible: true, orderData:[7]},  // created
 							{targets: 5, data: 'completed', width: 110, visible: true, orderData:[8]},  // completed
 							{targets: 6, data: 'error', width: 200, type: 'non-empty-string', render: DataTable.render.ellipsis( 40, true )}, // error
@@ -340,9 +281,40 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 							{targets: 8, data: 'sortCompleted', visible: false, searchable: false}
 				],
 				"lengthMenu": [ [-1], ["All"] ],
+				"initComplete": function () {
+					// Add Horizontal scroll on top and bottom - begin
+					 $('dt-scroll-body').css({
+	                    'overflow': 'hidden',
+	                    'border': '0'
+	                });
+	                // Enable TFOOT scoll bars
+	                $('.dt-scroll-foot').css('overflow', 'auto');
+	                $('.dt-scroll-head').css('overflow', 'auto');
+	                $('.dt-scroll-body').css('overflow', 'auto');
+	                // Sync TFOOT scrolling with TBODY
+	                $('.dt-scroll-foot').on('scroll', function () {
+	                    $('.dt-scroll-body').scrollLeft($(this).scrollLeft());
+	                });
+	                $('.dt-scroll-head').on('scroll', function () {
+	                    $('.dt-scroll-body').scrollLeft($(this).scrollLeft());
+	                });
+					//End of code foradding Horizontal scroll on top and bottom
+
+					// Show grid
+					$("#resultsGrid").show();
+					// Adjust Grid columns
+					$('#resultsGrid').DataTable().columns.adjust();
+		      },
 		} );
+		// Apply the search
+	    $( 'table thead'  ).on( 'keyup', ".column_search",function () {
+	        table
+	            .column( $(this).parent().index() )
+	            .search( this.value )
+	            .draw();
+	    } );
 	});
-	
+
 	function displayAll()
 	{
 		var checkBox = document.getElementById("allcheckbox");
