--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -269,7 +269,8 @@ tfoot input {
 				"aaSorting": [],
 				dom: 'rt',
 				scrollX : true,
-				scrollY: '500',
+				scrollY: '80vh',
+				scrollCollapse: true,
 				columnDefs: [ {targets: 0,  data: 'userId', width:70, visible: queryAll}, //userId
 							{targets: 1, data: 'taskId', width:280, visible: true},  // taskId
 							{targets: 2, data: 'sourceType', width: 150, visible: true},  // source type
