HPCDATAMGM-2006: Fix issue with Browse page being empty when default base path is not specified or the user does not have permissions on it

--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -62,7 +62,7 @@
     var start = "[";
     var end = "]";
     var data = [[${browserEntryList}]];
-    var basePathName = [[${basePath}]];
+    var basePath = [[${basePath}]];
     var scrollLoc = [[${scrollLoc}]];
     var userBookmarks = [[${userBookmarks}]];
     var refresh = null;
@@ -545,7 +545,9 @@ $(function() {
                 if(node.parent.id) {
                 	$li.find('.jqtree-title').after('<div id="' + ("processingIcon"+node.id) + '" style="display:inline-block; visibility:hidden" class="loader"></div>');
                 } else {
-                	$li.find('.jqtree-title').after('<a href="/hierarchy?basePath='+node.name+'" data-target="#validhierarchyModal" data-toggle="modal" data-placement="right"><img style="width: 25px; height: 25px;" src="img/help.png"></img></a><div id="' + ("processingIcon"+node.id) + '" style="display:inline-block; visibility:hidden" class="loader"></div>');
+                  if(basePath) {
+                    $li.find('.jqtree-title').after('<a href="/hierarchy?basePath='+node.name+'" data-target="#validhierarchyModal" data-toggle="modal" data-placement="right"><img style="width: 25px; height: 25px;" src="img/help.png"></img></a><div id="' + ("processingIcon"+node.id) + '" style="display:inline-block; visibility:hidden" class="loader"></div>');
+                  }
                 }
                 if(node.populated) {
                     //Open the node if this onCreateLi method was invoked
