--- a/src/hpc-web/src/main/resources/templates/updategroup.html
+++ b/src/hpc-web/src/main/resources/templates/updategroup.html
@@ -123,7 +123,7 @@
 																		<button type="submit" class="btn btn-md btn-primary"
 																			id="primaryButton" onClick="updateGroup()" th:disabled="${group != null} ?'false' : 'disabled'">Update</button>
 																		<button type="submit" class="btn btn-default"
-																			data-dismiss="modal" id="close" onClick="cancel()">Cancel</button>
+																			data-dismiss="modal" id="close" onClick="cancel()">Back</button>
 																	</div>
 																	<input type="hidden" name="actionType" id="actionType"/>
 																</td>
