Retract changes for ticket HPCDATAMGM-1982

--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -678,8 +678,8 @@ window.onclick = function(event) {
 									<div class="pull-right" id="searchInputDiv">
 										<div class="btn-group">
 											<label
-												title="Type text and press Enter. DME searches all columns in all search result pages.">
-												Global Search&nbsp;&nbsp;<input type="search"
+												title="Type text and press Enter. DME searches all columns except Path in all search result pages.">
+												Search Metadata&nbsp;&nbsp;<input type="search"
 												name="globalMetadataSearchText" id="searchInput"
 												style="height: 30px" th:value="${globalMetadataSearchText}">
 												<span id="searchClear"
